[gd_scene load_steps=4 format=2]

[ext_resource path="res://mocraAdventure/card_selector/CardSelector.gd" type="Script" id=1]
[ext_resource path="res://images/boxes/type1/2_1.png" type="Texture2D" id=2]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=3]

[node name="Control" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -750.0
offset_top = -200.0
offset_right = 750.0
offset_bottom = 350.0
custom_minimum_size = Vector2( 1500, 550 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 1650.0
offset_bottom = 600.0
custom_minimum_size = Vector2( 0, 550 )
texture = ExtResource( 2 )
expand = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -713.0
offset_top = -251.0
offset_right = 865.0
offset_bottom = 299.0
custom_minimum_size = Vector2( 0, 550 )

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
offset_right = 1500.0
offset_bottom = 535.0
custom_minimum_size = Vector2( 1500, 535 )
custom_constants/separation = 20
alignment = 1

[node name="closebutton" type="Button" parent="."]
offset_left = 1516.0
offset_top = 24.0
offset_right = 1601.0
offset_bottom = 109.0
theme = ExtResource( 3 )
text = "X"

[connection signal="advanced_selection" from="." to="." method="_on_Control_advanced_selection"]
[connection signal="tree_exited" from="." to="." method="_on_Control_tree_exited"]
[connection signal="pressed" from="closebutton" to="." method="_on_closebutton_pressed"]
